clusters/lab/firefly/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: firefly
  namespace: firefly
spec:
  selector:
    app.kubernetes.io/name: firefly
  ports:
    - name: http
      port: 80
      targetPort: http
